[#103474724] moved search icon and fixed spacing on filter bar

--- a/eums/client/less/general.less
+++ b/eums/client/less/general.less
@@ -389,6 +389,10 @@ h4.page-header {
   left: 0;
 }
 
+.right-addon .glyphicon {
+  right: 0;
+}
+
 .glyphicon-plus.pull-right {
   padding-left: 5px;
 }
@@ -617,4 +621,13 @@ h4.page-header {
 
 .three-columns-form .table-header th:hover {
   background-color: #1cabe2;
+}
+
+.filter-bar {
+  margin-left: -15px;
+  margin-right: -20px;
+}
+
+.filter-bar ul{
+  margin-top: 15px;
 }
